--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
+    "gulp": "^3.8.11",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "typescript": "^1.5.0-beta"
   }
 }
