--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
+    "del": "^1.1.1",
     "express": "~4.12.2",
     "gulp": "^3.8.11",
+    "gulp-copy": "0.0.2",
+    "gulp-typescript": "^2.7.3",
+    "gulp-util": "^3.0.4",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
